@@ -1,5 +1,10 @@
 2010-07-01  Pedro Alves  <pedro@codesourcery.com>
 
+	* dwarf2loc.c (locexpr_tracepoint_var_ref)
+	(loclist_tracepoint_var_ref): Handle optimized out values.
+
+2010-07-01  Pedro Alves  <pedro@codesourcery.com>
+
 	* breakpoint.c (update_watchpoint, _initialize_breakpoint): Remove
 	unnecessary space in string.
 	* filesystem.c (_initialize_filesystem): Ditto.
